# vidya

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench-history-rust.csv  bench-history.csv  cyrb.toml  cyrius.cyml  cyrius.toml  job-logs.txt  libstdin.rlib  sakshi.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
content/algorithms/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/allocators/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/audio_dsp/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/audio_synthesis/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/binary_formats/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/bindless_resources/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/bloom_and_glow/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/boot_and_startup/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/btree_indexing/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/build_systems/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/code_generation/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  kernel_codegen.toml  openqasm.qasm  python.py  rust.rs  shell.sh  stack_frames.toml  typescript.ts  zig.zig
content/collision_detection_2d/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/compiler_bootstrapping/: asm_aarch64.s  asm_x86_64.s  bootstrap_repair.toml  c.c  concept.toml  cyrius.cyr  cyrius_ecosystem.toml  cyrius_implementation.toml  cyrius_language.toml  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/compression/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/concurrency/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.py  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/concurrent_file_access/: asm_aarch64.s  asm_x86_64.s  c.c  concept.toml  cyrius.cyr  go.go  openqasm.qasm  python.py  rust.rs  shell.sh  typescript.ts  zig.zig
content/consensus/: asm_aarch64.s  (+11 more)
docs/: content-expansion-2026-04-08.md  doc-health.md  sources.md  usage.md
examples/: basic.rs
fuzz/: fuzz_http.cyr  fuzz_search.cyr  fuzz_toml.cyr
lib/: alloc.cyr  args.cyr  async.cyr  fnptr.cyr  fs.cyr  hashmap.cyr  http_server.cyr  io.cyr  json.cyr  math.cyr  matrix.cyr  net.cyr  regex.cyr  sakshi.cyr  sandhi.cyr  str.cyr  string.cyr  syscalls.cyr  tagged.cyr  toml.cyr  trait.cyr  vec.cyr  vidya.cyr  vyakarana.cyr
scripts/: bench-history.sh  validate-content.sh  version-bump.sh
src/: compare.rs  concept.rs  language.rs  lib.rs  loader.rs  main.cyr  mcp.rs  registry.rs  search.rs  validate.rs
tests/: loader_test.rs  test.sh  validate_test.rs  vidya.bcyr  vidya.tcyr
(+819 files in other folders)
