[package]
name = "vidya"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Vidya — programming reference library and queryable corpus for AGNOS"
homepage = "https://github.com/MacCracken/vidya"
repository = "https://github.com/MacCracken/vidya"
readme = "README.md"
documentation = "https://docs.rs/vidya"
keywords = ["programming", "reference", "education", "rosetta", "best-practices"]
categories = ["development-tools", "text-processing"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]
publish = false

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging", "mcp"]
logging = ["dep:tracing-subscriber"]
mcp = []

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
