[package]
name = "vidya"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Vidya — programming reference library and queryable corpus for AGNOS"
homepage = "https://github.com/MacCracken/vidya"
repository = "https://github.com/MacCracken/vidya"
readme = "README.md"
documentation = "https://docs.rs/vidya"
keywords = ["programming", "reference", "education", "rosetta", "best-practices"]
categories = ["development-tools", "text-processing"]
exclude = [".claude/", ".github/", "docs/", "scripts/", "content/", ".venv/", "target/", "*.rlib"]
publish = true

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging", "mcp", "openqasm"]
logging = ["dep:tracing-subscriber"]
mcp = ["dep:bote"]
openqasm = ["dep:openqasm"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
toml = "0.8"
thiserror = { version = "2", default-features = false }
tracing = "0.1"
bote = { version = "0.50", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
openqasm = { version = "0.1.2", optional = true, features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[[example]]
name = "test_qasm"
required-features = ["openqasm"]

[[bench]]
name = "benchmarks"
harness = false
